# stkai-sdk-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish-testpypi.yml  publish.yml  python-build-and-test.yml
docs/: configuration.md  getting-started.md  http-client.md  index.md
docs/agents/: handlers.md  index.md  rate-limiting.md  usage.md
docs/api/: agents.md  config.md  http.md  rqc.md
docs/internal/: aws-sdk-comparison.md
docs/rqc/: handlers.md  index.md  listeners.md  rate-limiting.md  usage.md
scripts/: release.sh  run_simulations.sh
simulations/: .gitignore  README.md  requirements.txt  run_sweep.py
simulations/results/: .gitignore  latest
simulations/results/agent/reference/: README.md
simulations/results/reference/: README.md
simulations/results/rqc/reference/: README.md
simulations/scenarios/: __init__.py  agent_sweep_test.py  sweep_test.py
simulations/src/: __init__.py  client.py  config.py  jitter.py  metrics.py  retry.py  server.py  simulator.py  visualize.py
simulations/src/rate_limiters/: __init__.py  adaptive.py  base.py  congestion.py  congestion_aware.py  latency_aware.py  pure_congestion.py  token_bucket.py
src/stkai/: __init__.py  _auth.py  _cli.py  _config.py  _file_upload.py  _http.py  _rate_limit.py  _retry.py  _utils.py
src/stkai/agents/: __init__.py  _agent.py  _conversation.py  _file_upload.py  _handlers.py  _http.py  _models.py  _sse_parser.py  _stream.py
src/stkai/rqc/: __init__.py  _event_listeners.py  _handlers.py  _http.py  _models.py  _remote_quick_command.py  _utils.py
tests/: __init__.py  test_auth.py  test_cli.py  test_config.py  test_congestion_controlled_http_client.py  test_file_upload.py  test_http.py  test_rate_limit.py  test_retry.py  test_utils.py
tests/agents/: test_agent.py  test_conversation.py  test_file_upload.py  test_handlers.py  test_sse_parser.py  test_stream.py
tests/rqc/: __init__.py  test_client.py  test_event_listeners.py  test_handlers.py  test_http.py  test_models.py  test_remote_quick_command.py
